--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Animal behavior'
+- GITenberg
 title: Ways of Wood Folk
 url: http://www.gutenberg.org/ebooks/18193
